a href added to all cards, fixed css, need to clean up whitespace and become a host on headerSearch page

--- a/src/Card.css
+++ b/src/Card.css
@@ -5,12 +5,13 @@
     /* box-shadow: 0px 6px 18px -9px rgba(0,0,0,0.75); */
     transition: transform 100ms ease-in;
     cursor: pointer;
+    /* max-width: 100%; */
 
     
 }
 
 .card:hover{
-    transform:scale(1.07)
+    transform:scale(1.07);
 }
 .card > img{
     object-fit: fill;
@@ -31,5 +32,6 @@
     -webkit-box-orient: vertical ;
     color: rgb(34, 34, 34) ;
     font-weight: lighter;
-    white-space: pre-line ;}
+    white-space: pre-line ;
+}
 
