--- a/src/HeaderSearch.css
+++ b/src/HeaderSearch.css
@@ -2,7 +2,10 @@
     color:black;
     margin-right:5px;
 }
-
+.language:hover{
+    color:lightgray;
+    cursor: pointer;
+}
 .headerSearchLogo{
     width:100%;
 }
@@ -19,3 +22,16 @@
     border-bottom: 1px solid lightgray;
     margin-top:0;
 }
+
+.becomeAHost2 > p{
+    color:black;
+    text-decoration: none;
+    margin-right: 5px;
+}
+
+.becomeAHost2 > p:hover{
+    opacity: .5;
+
+}
+
+
