--- a/src/Home.css
+++ b/src/Home.css
@@ -1,13 +1,13 @@
 .home_section{
   display: flex;
-
   padding:30px 40px 30px 40px;
 
-    
 }
 
 .home > h1{
-  margin-top:480px;
+  /* margin-top:270px; */
+  margin-top:30%;
+
   margin-left:50px;
 
   white-space: pre-line !important;
@@ -27,6 +27,7 @@ position:absolute;
  z-index:999; 
  margin:70px 0px 0px 100px;
  font-size:20px;
+ max-width:30%;
  
 
 }
@@ -65,4 +66,15 @@ position:absolute;
   font-weight: 400;
   line-height: 36px;
 
+}
+
+.home_section2{
+  display: flex;
+  padding:30px 40px 30px 40px;
+  max-width:100%;
+  flex: wrap;
+
+}
+.home_section > a{
+  text-decoration: none;
 }
